# ai_meeting_recorder

./: .gitignore  LICENSE  MANIFEST.in  Readme.md  THIRD_PARTY_LICENSES  ai_meeting_recorder.py  pyproject.toml  setup.py
src/: ai_control.py  controller.py  gui_control.py  main.py  model.py  resource_util.py  setting.py  sound_control.py  view.py
